<resources>
    <string name="app_name">Emoncms</string>
    <string name="First_Name">Firstname</string>
    <string name="sun_exchange">Sun Exchange</string>
    <string name="join">Join</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="pass_word">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="creaan_an_account">Create an account</string>
    <string name="alraedy_have_an_account">Alraedy have an account?</string>

    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>

    <string name="enter_email_or_username">Enter Email or Username</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="do_not_have_a_account">Do not have a account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="header">headers works</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_info">Personal Info</string>
    <string name="save_changes">Save Changes</string>
    <string name="reset">Reset</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
